--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
           ></a>
         </div>
 
-        <button class="btn btn-outline-danger btn-lg me-2 fw-bold mt-2">
+        <button class="btn btn-outline-danger btn-lg me-2 fw-bold mt-2" onclick="location.href='#services'">
           Learn More
         </button>
 
-        <button class="btn btn-danger btn-lg fw-bold mt-2">
+        <button class="btn btn-danger btn-lg fw-bold mt-2" onclick="location.href='#programs'">
           View Programs
         </button>
       </div>
