--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h4 class="">Let us be your guide to your body goal.</h4>
         <h1 class="">
           CONSISTENCY EQUALS <br />
-          GROWTH & RESULTS<span class="text-warning"></span>
+          GROWTH & RESULTS
         </h1>
         <h6 class="text-light my-4">
           We focus on teaching the basics about body building, <br />
@@ -115,7 +115,7 @@
           ></a>
         </div>
 
-        <button class="btn btn-outline-danger btn-lg me-2 fw-bold mt-2" onclick="location.href='#services'">
+        <button class="btn pex text-light btn-outline-danger btn-lg me-2 fw-bold mt-2" onclick="location.href='#services'">
           Learn More
         </button>
 
@@ -135,14 +135,14 @@
         progress tracking and promoting long-term lifestyle changes.
       </h6>
       <div class="dspl">
-        <div class="dsp-itms">
-          <img src="images/process0.jpeg" alt="" />
+        <div class="dsp-itms xy">
+          <img style="width: 380px; border-radius: 10px; margin-top: 10px;"  src="images/process0.jpeg" alt="" />
         </div>
         <div class="dsp-itms">
-          <img src="images/process.jpeg" alt="" />
+          <img style="width: 380px; border-radius: 10px; margin-top: 10px;" src="images/process.jpeg" alt="" />
         </div>
         <div class="dsp-itms">
-          <img src="images/process2.jpeg" alt="" />
+          <img style="width: 380px; border-radius: 10px; margin-top: 10px;" src="images/process2.jpeg" alt="" />
         </div>
       </div>
 
@@ -261,29 +261,29 @@
         overall fitness, we have the services to help you achieve your goals.
       </h6>
 
-      <div class="dspl">
+      <div id="disc" class="dspl">
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/cycl.jpg" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0;" src="images/cycl.jpg" alt="" />
+          <div class="d-flex align-items-center gap-3 px-2">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
             <div class="my-2 text-align-center">
-              <h4 class="text-dark fw-bold">Group Fitness Class</h4>
+              <h4 class="text-dark fw-bold">Group Classes</h4>
               <p class="text-dark"> Join our energetic group fitness classes and go with the rhythm
               </p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             Our group fitness classes offer a fun and motivating environment for you to achieve your fitness goals. With a variety of classes available, including high-intensity interval training, yoga, and dance, there’s something for everyone. Get ready to challenge yourself, make new friends, and have a blast while getting fit!
 
           </p>
         </div>
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/shespots.jpeg" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0 ;" src="images/shespots.jpeg" alt="" />
+          <div class="d-flex align-items-center px-2 gap-3">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
@@ -292,14 +292,14 @@
               <p class="text-dark">Build strength and sculpt your body with our weight training programs</p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             Our weight training programs are designed to help you build lean muscle, increase strength, and improve overall body composition. Whether you’re a beginner or an experienced lifter, our knowledgeable trainers will guide you through proper form and technique to maximize your results. Get ready to lift, tone, and transform your body!
           </p>
         </div>
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/grp-lg2.jpg" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0;" src="images/grp-lg2.jpg" alt="" />
+          <div class="d-flex align-items-center px-2 gap-3">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
@@ -309,15 +309,15 @@
               </p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             Cardio is an essential component of any fitness routine, and our gym offers a wide range of cardio equipment and classes to help you get your heart rate up and burn those calories. From treadmills and ellipticals to cycling classes and HIIT workouts, we have everything you need to improve cardiovascular endurance and achieve your weight loss goals.
 
           </p>
         </div>
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/gym.jpg" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0;" src="images/gym.jpg" alt="" />
+          <div class="d-flex align-items-center px-2 gap-3">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
@@ -327,15 +327,15 @@
               </p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             Our gym is equipped with the latest and most advanced fitness equipment to ensure you have everything you need for a successful workout. From cardio machines like treadmills and rowers to strength training equipment like dumbbells and weight machines, we have it all. Experience the convenience and effectiveness of our top-notch gym equipment as you work towards your fitness goals.
 
           </p>
         </div>
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/plank.webp" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0;" src="images/plank.webp" alt="" />
+          <div class="d-flex align-items-center px-2 gap-3">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
@@ -344,14 +344,14 @@
               <p class="text-dark">Boost your fitness journey with personalized expert trainers</p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             Our team of certified personal trainers is here to provide you with the knowledge, motivation, and support you need to reach your fitness goals. Whether you’re looking to lose weight, build muscle, or improve overall fitness, our trainers will create a customized workout plan tailored to your specific needs and preferences. Get ready to be pushed, motivated, and inspired by our dedicated trainers as you achieve your best self.
           </p>
         </div>
 
-        <div class="dsp-itms card px-2 pb-2 mt-3">
-          <img style="width: 340px" src="images/pushgirl.jpg" alt="" />
-          <div class="d-flex align-items-center gap-3">
+        <div class="dsp-itms card pb-2 mt-3">
+          <img style="border-radius: 10px 10px 0 0;" src="images/pushgirl.jpg" alt="" />
+          <div class="d-flex align-items-center px-2 gap-3">
             <div class="icon-part">
               <i class="fa-solid fa-person-swimming"></i>
             </div>
@@ -360,7 +360,7 @@
               <p class="text-dark">Track your progress and celebrate your achievements with you.</p>
             </div>
           </div>
-          <p class="text-dark">
+          <p class="text-dark px-2">
             We believe in the importance of tracking your progress to stay motivated and celebrate your achievements along your fitness journey. Our gym offers regular progress checks, where our trainers will assess your fitness level, measure your body composition, and help you set new goals. With these progress checks, you’ll stay accountable, see tangible results, and stay motivated to continue pushing yourself to new heights.
           </p>
         </div>
@@ -378,24 +378,24 @@
 
         <div class="dspl">
 
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="width: 380px; height: 253px;" src="images/blugpsh.jpg" alt="">
           </div>
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="height: 253px; width: 380px;" src="images/blugrsh.jpg" alt="">
           </div>
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="height: 253px; width: 380px;" src="images/blug.jpg" alt="">
           </div>
 
           
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="height: 253px; width: 380px;" src="images/rusin.jpg" alt="">
           </div>
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="height: 253px; width: 380px;" src="images/rushin2.jpg" alt="">
           </div>
-          <div class="dsp-itms">
+          <div class="dsp-itms mt-3 rd">
             <img style="height: 253px; width: 380px;" src="images/grp-lg.jpg" alt="">
           </div>
         </div>
