--- a/index.html
+++ b/index.html
@@ -136,23 +136,73 @@
 
 
         <div class="base-content">
-          <div class="link-block">
-            <span onclick="location.href='https://youtube.com/@kngdaveed?si=iPt3vKZ5G0Q4Qv78'" class="">
-              <i class="fa-brands fa-youtube"></i>
-            </span>
-            
-            <span onclick="location.href='https://www.instagram.com/iam_davidgodfrey?igsh=ejduc2Y3cjdid2Vy&utm_source=qr'"  class="">
-              <i class="fa-brands fa-instagram"></i>
-            </span>
-            <span onclick="location.href='https://www.facebook.com/profile.php?id=100014673094112&mibextid=LQQJ4d'"  class="">
-              <i class="fa-brands fa-facebook"></i>
-            </span>
-            <span onclick="location.href='https://www.tiktok.com/@kng_daveed?_t=8nj980w2K6n&_r=1'"  class="">
-              <i class="fa-brands fa-tiktok"></i>
-            </span>
-            <span onclick="location.href='https://youtube.com/@kngdaveed?si=iPt3vKZ5G0Q4Qv78'" class="">
-              <i class="fa-brands fa-twitter"></i>
-            </span>
+          <div class="brack">
+            <div class="link-block">
+                <span onclick="location.href='https://youtube.com/@kngdaveed?si=iPt3vKZ5G0Q4Qv78'" class="">
+                  <i class="fa-brands fa-youtube"></i>
+                </span>
+                
+                <span onclick="location.href='https://www.instagram.com/iam_davidgodfrey?igsh=ejduc2Y3cjdid2Vy&utm_source=qr'"  class="">
+                  <i class="fa-brands fa-instagram"></i>
+                </span>
+                <span onclick="location.href='https://www.facebook.com/profile.php?id=100014673094112&mibextid=LQQJ4d'"  class="">
+                  <i class="fa-brands fa-facebook"></i>
+                </span>
+                <span onclick="location.href='https://www.tiktok.com/@kng_daveed?_t=8nj980w2K6n&_r=1'"  class="">
+                  <i class="fa-brands fa-tiktok"></i>
+                </span>
+                <span onclick="location.href='https://youtube.com/@kngdaveed?si=iPt3vKZ5G0Q4Qv78'" class="">
+                  <i class="fa-brands fa-twitter"></i>
+                </span>
+            </div>
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+              <div class="carousel-inner" >
+                <div class="carousel-item active content-ad04 w-100">
+                  <h5 class="fw--bold">
+                    Content Title
+                  </h5>
+                  <p class="mb-0">
+                    Content descriptions dolor sit, amet consectetur adipisicing elit. Facere perferendis corrupti voluptas.
+                  </p>
+                  <div class="content-link">
+                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </div>
+                </div>
+                <div class="content-ad05 w-100 carousel-item">
+                  <h5 class="fw--bold">
+                    Content Title
+                  </h5>
+                  <p class="mb-0">
+                    Content descriptions dolor sit, amet consectetur adipisicing elit. Facere perferendis corrupti voluptas.
+                  </p>
+                  <div class="content-link">
+                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </div>
+                </div>
+                <div class="content-ad06 w-100 carousel-item">
+                  <h5 class="fw--bold">
+                    Content Title
+                  </h5>
+                  <p class="mb-0">
+                    Content descriptions dolor sit, amet consectetur adipisicing elit. Facere perferendis corrupti voluptas.
+                  </p>
+                  <div class="content-link">
+                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </div>
+                </div>
+                <div class="content-ad07 w-100 carousel-item">
+                  <h5 class="fw--bold">
+                    Content Title
+                  </h5>
+                  <p class="mb-0">
+                    Content descriptions dolor sit, amet consectetur adipisicing elit. Facere perferendis corrupti voluptas.
+                  </p>
+                  <div class="content-link">
+                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="content-ad01">
             <h5 class="fw--bold">
