--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                   <i class="fa-brands fa-twitter"></i>
                 </span>
             </div>
-            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-interval="100">
               <div class="carousel-inner" >
-                <div class="carousel-item active content-ad04 w-100">
+                <div class="carousel-item active content-ad04">
                   <h5 class="fw--bold">
                     Content Title
                   </h5>
@@ -168,7 +168,7 @@
                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
                   </div>
                 </div>
-                <div class="content-ad05 w-100 carousel-item">
+                <div class="content-ad05 carousel-item">
                   <h5 class="fw--bold">
                     Content Title
                   </h5>
@@ -179,7 +179,7 @@
                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
                   </div>
                 </div>
-                <div class="content-ad06 w-100 carousel-item">
+                <div class="content-ad06 carousel-item">
                   <h5 class="fw--bold">
                     Content Title
                   </h5>
@@ -190,7 +190,7 @@
                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
                   </div>
                 </div>
-                <div class="content-ad07 w-100 carousel-item">
+                <div class="content-ad07 carousel-item">
                   <h5 class="fw--bold">
                     Content Title
                   </h5>
@@ -238,41 +238,7 @@
            </div>
           </div>
         </div>
-          <!-- <div class="col-md">
-            <h3 class="">
-              PUSH TILL YOU HAVE NO LIMITS
-            </h3>
-            <h6 class="mb-3">Let us be your guide to that dream body. we create the foundation for the steps that you climb</h6>
-            <h6 class="text-light mt-4 mb-3">
-              We focus on teaching the basics about body building, <br />
-              we help you understand your body type by conducting simple short
-              surveys, <br />
-              from which we then design specific exercises that best suit your goals
-            </h6>
-            
-            <div class="social-links mb-3">
-              <a
-                href="https://www.facebook.com/profile.php?id=100014673094112&mibextid=2JQ9oc"
-                ><i class="fa-brands fa-facebook-f"></i
-              ></a>
-              <a
-                href="https://instagram.com/iam_davidgodfrey?igshid=OGQ5ZDc2ODk2ZA=="
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a href="https://www.linkedin.com/in/chimaobim-godfrey-731093265"
-                ><i class="fa-brands fa-linkedin-in"></i
-              ></a> <br>
-
-              <button onclick="location.href='#about'" class="btn btn-danger px-3 py-2 fw-bold me-3">Find A Coach</button>
-              <button onclick="location.href='https://personal-portfolio-kngdaveed.vercel.app'" class="btn py-2 btn-outline-danger fw-bold px-4">Contact Designer</button>
-            </div>
-          </div>
-          <div class="col-md web">
-            <img class="w-100 object-fit-cover" style="height: 80vh;" src="https://images.pexels.com/photos/3289711/pexels-photo-3289711.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-          </div>
-          <div class="col-md mobile">
-            <img class="w-100 object-fit-cover" style="height: 35vh;" src="https://images.pexels.com/photos/136404/pexels-photo-136404.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-          </div> -->
+         
       </div>
 
     </section>
